@@ -14,7 +14,7 @@
 </HEAD>
 <BODY>
 <BLOCKQUOTE>
-<div align=right><h5>Last update 24-Aug-2003</h5></div>
+<div align=right><h5>Last update 08-Jan-2004</h5></div>
 <div align=center><H1>MBSE BBS Setup - Fidonet nodes.</H1></div>
 <P>
 
@@ -200,13 +200,13 @@ this node.</td></tr>
 on command (billing is not yet available).</td></tr>
 <tr><th nowrap align=left valign=top>Credit</th><td>The credit this node has in
 units.</td></tr>
-<tr><th nowrap align=left valign=top>Debet</th><td>The debet we have with this
+<tr><th nowrap align=left valign=top>Debit</th><td>The debit we have with this
 node (informational).</td></tr>
 <tr><th nowrap align=left valign=top>Add</th><td>Add (or substract) factor to
 the bill.</td></tr>
-<tr><th nowrap align=left valign=top>Warn level</th><td>The debet level when to
+<tr><th nowrap align=left valign=top>Warn level</th><td>The debit level when to
 write a warning mesage.</td></tr>
-<tr><th nowrap align=left valign=top>Stop level</th><td>The debet level when to
+<tr><th nowrap align=left valign=top>Stop level</th><td>The debit level when to
 stop sending files.</td></tr>
 </table>
 <P>
